sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:20: error: ')' expected but ';' found.
  } while (echangefait==true; or ecart>=1)
                            ^AlgCombSort:20: error: ';' expected but integer literal found.
  } while (echangefait==true; or ecart>=1)
                                        ^